--- a/tests/cesium/index.html
+++ b/tests/cesium/index.html
@@ -28,22 +28,54 @@
     // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
     const viewer = new Cesium.Viewer('cesiumContainer', {
       terrain: Cesium.Terrain.fromWorldTerrain(),
-    });    
+      animation: false,
+      timeline: false,
+    }); 
+    
+    var imagery = Cesium.createDefaultImageryProviderViewModels();
+
+    //LABEL 
+/*var viewer = new Cesium.Viewer('cesiumContainer', {
+    imageryProviderViewModels: imagery,
+    selectedImageryProviderViewModel: imagery[1]
+});*/
 
     // Fly the camera to San Francisco at the given longitude, latitude, and height.
-    viewer.camera.flyTo({
+    /*iewer.camera.flyTo({
       destination: Cesium.Cartesian3.fromDegrees(-122.4175, 37.655, 400),
       orientation: {
         heading: Cesium.Math.toRadians(0.0),
         pitch: Cesium.Math.toRadians(-15.0),
       }
-    });
+    });*/
 
     // Add Cesium OSM Buildings, a global 3D buildings layer.
     const buildingTileset = await Cesium.createOsmBuildingsAsync();
     viewer.scene.primitives.add(buildingTileset);   
 
-  </script>
+const places = [{name: "Test1", lat: 40, lon: 40}, {name: "Test2", lat: 20, lon: 40},{name: "Test3", lat: 40, lon: 20},{name: "Test4", lat: -40, lon: 40},{name: "Test5", lat: 40, lon: -40},{name: "Test6", lat: -40, lon: 0},{name: "Test7", lat: 0, lon: 0},]
+const point = {
+    pixelSize: 10,
+    color: Cesium.Color.RED,
+    outlineColor: Cesium.Color.WHITE,
+    outlineWidth: 2,
+  }
+for (let place of places) {
+  viewer.entities.add({
+    name: place.name,
+    position: Cesium.Cartesian3.fromDegrees(place.lat, place.lon),
+    point: point,
+    label: {
+      text: place.name,
+      font: "14pt monospace",
+    style: Cesium.LabelStyle.FILL_AND_OUTLINE,
+    outlineWidth: 2,
+    verticalOrigin: Cesium.VerticalOrigin.BOTTOM,
+    pixelOffset: new Cesium.Cartesian2(0, -9),
+    }
+  });
+}
+</script>
 
  </div>
 
