--- a/globe/globe.html
+++ b/globe/globe.html
@@ -1,1 +1,84 @@
-Le globe
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+
+  <!-- Include the CesiumJS JavaScript and CSS files -->
+
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.126/Build/Cesium/Cesium.js"></script>
+
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.126/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <div id="cesiumContainer"></div>
+
+  <script type="module">
+    // Your access token can be found at: https://ion.cesium.com/tokens.
+    // Replace `your_access_token` with your Cesium ion access token.
+
+
+    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI2MzE1YjcxNS0yZjA5LTQyMjgtYTgxMy1kNTJkYWEyNDczM2QiLCJpZCI6Mjc5OTg2LCJpYXQiOjE3NDA3NDY0MTF9.e8NfSN05dzDMqasqzxwgNE3JI1cPfrcCiSDnmaKLbug';
+
+    // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
+    const viewer = new Cesium.Viewer('cesiumContainer', {
+      terrain: Cesium.Terrain.fromWorldTerrain(),
+      animation: false,
+      timeline: false,
+    }); 
+    
+    var imagery = Cesium.createDefaultImageryProviderViewModels();
+
+    //LABEL 
+/*var viewer = new Cesium.Viewer('cesiumContainer', {
+    imageryProviderViewModels: imagery,
+    selectedImageryProviderViewModel: imagery[1]
+});*/
+
+    // Fly the camera to San Francisco at the given longitude, latitude, and height.
+    /*iewer.camera.flyTo({
+      destination: Cesium.Cartesian3.fromDegrees(-122.4175, 37.655, 400),
+      orientation: {
+        heading: Cesium.Math.toRadians(0.0),
+        pitch: Cesium.Math.toRadians(-15.0),
+      }
+    });*/
+
+    // Add Cesium OSM Buildings, a global 3D buildings layer.
+    const buildingTileset = await Cesium.createOsmBuildingsAsync();
+    viewer.scene.primitives.add(buildingTileset);   
+
+const places = [{name: "Test1", lat: 40, lon: 40}, {name: "Test2", lat: 20, lon: 40},{name: "Test3", lat: 40, lon: 20},{name: "Test4", lat: -40, lon: 40},{name: "Test5", lat: 40, lon: -40},{name: "Test6", lat: -40, lon: 0},{name: "Test7", lat: 0, lon: 0},]
+const point = {
+    pixelSize: 10,
+    color: Cesium.Color.RED,
+    outlineColor: Cesium.Color.WHITE,
+    outlineWidth: 2,
+  }
+for (let place of places) {
+  viewer.entities.add({
+    name: place.name,
+    position: Cesium.Cartesian3.fromDegrees(place.lat, place.lon),
+    point: point,
+    label: {
+      text: place.name,
+      font: "14pt monospace",
+    style: Cesium.LabelStyle.FILL_AND_OUTLINE,
+    outlineWidth: 2,
+    verticalOrigin: Cesium.VerticalOrigin.BOTTOM,
+    pixelOffset: new Cesium.Cartesian2(0, -9),
+    }
+  });
+}
+</script>
+
+ </div>
+
+</body>
+
+</html>
