Masquage du bouton camera + changement de la distance d'affichage des labels

--- a/globe/globe.html
+++ b/globe/globe.html
@@ -26,6 +26,9 @@
         body {
             background-color: black;
         }
+        button.cesium-infoBox-camera {
+  display: none;
+}
 </style>
 </head>
 
@@ -46,6 +49,8 @@
       animation: false,
       timeline: false,
     }); 
+
+    viewer.scene.screenSpaceCameraController.minimumZoomDistance = 6378137 * 0.05
     
     var imagery = Cesium.createDefaultImageryProviderViewModels();
 
@@ -82,7 +87,7 @@ for (let place of places) {
     Cesium.sampleTerrainMostDetailed(viewer.terrainProvider, [Cesium.Cartographic.fromDegrees(place.coordinates.lon, place.coordinates.lat)])
         .then((updatedPositions) => {
             const height = updatedPositions[0].height || 0; // Hauteur du terrain
-            const adjustedHeight = height + 200; // On ajoute 2000m pour éviter tout enfouissement
+            const adjustedHeight = height + 2000; // On ajoute 2000m pour éviter tout enfouissement
 
             const adjustedPosition = Cesium.Cartesian3.fromDegrees(place.coordinates.lon, place.coordinates.lat, adjustedHeight);
 
@@ -110,7 +115,7 @@ for (let place of places) {
             entity._distanceLabelUpdate = function (mousePosition) {
                 if (!mousePosition) return;
                 const distance = Cesium.Cartesian3.distance(mousePosition, adjustedPosition);
-                entity.label.show = distance < 99998; // Affiche si la distance est < 10 km
+                entity.label.show = distance < 55000; // Affiche si la distance est < 10 km 99998
             };
         });
 }
