La carte zoom sur la position de l'utilisateur

--- a/globe/globe.html
+++ b/globe/globe.html
@@ -73,7 +73,7 @@
     const buildingTileset = await Cesium.createOsmBuildingsAsync();
     viewer.scene.primitives.add(buildingTileset);   
 
-const places = //PASTE Monuments JSON here (it should be an array);
+const places = []//PASTE Monuments JSON here (it should be an array);
 const point = {
     pixelSize: 10,
     color: Cesium.Color.RED,
